--- a/ca-core/pom.xml
+++ b/ca-core/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.ca</groupId>
+            <artifactId>ca-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
