--- a/ca-portal-web/src/main/resources/config/application-prod.yaml
+++ b/ca-portal-web/src/main/resources/config/application-prod.yaml
@@ -28,6 +28,18 @@ spring:
       #filters: stat,wall,slf4j
       # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+  redis:
+    database: 0
+    host: 47.105.149.158
+    port: 6379
+    password: caserver
+    jedis:
+      pool:
+        max-active: 8
+        max-idle: 8
+        min-idle: 0
+        max-wait: -1ms
+    timeout: 300ms
 
 mybatis:
   configuration:
