--- a/ca-common/pom.xml
+++ b/ca-common/pom.xml
@@ -79,6 +79,14 @@
             <version>${servlet.version}</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.stuxuhai</groupId>
+            <artifactId>jpinyin</artifactId>
+            <version>1.1.7</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
