--- a/ca-portal-web/src/main/resources/config/application-prod.yaml
+++ b/ca-portal-web/src/main/resources/config/application-prod.yaml
@@ -39,7 +39,11 @@ spring:
         max-idle: 8
         min-idle: 0
         max-wait: -1ms
-    timeout: 300ms
+    timeout: 3000ms
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 5MB
 
 mybatis:
   configuration:
