--- a/ca-portal-web/pom.xml
+++ b/ca-portal-web/pom.xml
@@ -183,7 +183,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.17</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>3.0.10</version>
+        </dependency>
     </dependencies>
 
     <build>
