--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hibernate-validator.version>6.0.16.Final</hibernate-validator.version>
         <fastjson.version>1.2.58</fastjson.version>
+        <jjwt.version>0.9.1</jjwt.version>
+        <hutool.version>5.0.6</hutool.version>
     </properties>
 
     <dependencyManagement>
