--- a/ca-config-web/src/main/resources/config/application-prod.yaml
+++ b/ca-config-web/src/main/resources/config/application-prod.yaml
@@ -55,6 +55,17 @@ pagehelper:
   rowBoundsWithCount: true
   offsetAsPageNum: true #pageNum=offset pageSize=limit
 
+#jwt
+jwt:
+  header: Authorization
+  secret: mySecret
+  # token 过期时间/毫秒，6小时 = 21600000  1小时 = 3600000 7天 = 604800000
+  expiration: 604800000
+  # 在线用户key
+  online: config-web-online-token
+  # 验证码
+  codeKey: code-key
+
 swagger:
   enable: false
 
