--- a/ca-config-web/src/main/resources/config/application-prod.yaml
+++ b/ca-config-web/src/main/resources/config/application-prod.yaml
@@ -5,7 +5,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/xxx?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+      url: jdbc:mysql://localhost:3306/xxx?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
       username: root
       password: root
       initialSize: 1
