线上环境部署 打包日志优化

--- a/ca-config-web/src/main/resources/config/application.yaml
+++ b/ca-config-web/src/main/resources/config/application.yaml
@@ -11,7 +11,7 @@ server:
 
 spring:
   profiles:
-    active: dev #环境
+    active: prod #环境
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss #日期格式
