--- a/ca-config-web/src/main/resources/config/application-prod.yaml
+++ b/ca-config-web/src/main/resources/config/application-prod.yaml
@@ -5,9 +5,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/xxx?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-      username: root
-      password: root
+      url: jdbc:mysql://39.101.173.52:3306/ca?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+      username: caserver
+      password: bhnd%$..ivhs
       initialSize: 1
       minIdle: 3
       maxActive: 20
@@ -30,7 +30,7 @@ spring:
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
   redis:
     database: 0
-    host: 47.105.149.158
+    host: 39.101.173.52
     port: 6379
     password: caserver
     jedis:
