--- a/ca-config-web/pom.xml
+++ b/ca-config-web/pom.xml
@@ -200,6 +200,11 @@
                 相当于compile，但是打包阶段做了exclude操作-->
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>[7.2.0, 7.2.99]</version>
+        </dependency>
     </dependencies>
 
     <build>
