--- a/ca-config-web/src/main/resources/config/application-dev.yaml
+++ b/ca-config-web/src/main/resources/config/application-dev.yaml
@@ -104,3 +104,9 @@ logging:
     cn.code.chameleon: debug
     org.springframework.web: debug
   config: classpath:log/log4j2.xml
+
+qiniu:
+  ACCESS_KEY: QCD7SK9ep1JmmGDFQm2cr4PddkKVHVodtMFa9P9A
+  SECRET_KEY: EdOOpUTsU9TXKw3GNGQX3NCBjrP6H_WYB_OZhdM5
+  bucket: caoos
+
